--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,8 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.5
- 
-
+  # syncfusion_flutter_charts: ^20.4.44
+  fl_chart: ^0.55.2
 dev_dependencies:
   flutter_lints: ^2.0.0
   flutter_test:
